--- a/_data/top_scrobbled.yml
+++ b/_data/top_scrobbled.yml
@@ -177,7 +177,7 @@
   artist: "StayC"
   scrobbles: 11
   genres:
-    - type: kpop
+    - type: k-pop
       playlist: "https://open.spotify.com/playlist/2cD5CU3vfinIhZ4RMrTEJf?si=98b8844a1c91416a"
   lyric: "I may seem flashy on the outside but I’m still afraid"
   highlight: "the last chorus with isa's voice hits different"
