successfully fixed playlists

--- a/_data/playlists.yml
+++ b/_data/playlists.yml
@@ -8,7 +8,11 @@
   playlist: https://open.spotify.com/playlist/67oR5EbL2QPMlErBvGWRmx?si=bed909aaa12043b1
 - genre: k-pop
   playlist: https://open.spotify.com/playlist/2cD5CU3vfinIhZ4RMrTEJf?si=98b8844a1c91416a
+- genre: j-pop
+  playlist: https://open.spotify.com/playlist/2cD5CU3vfinIhZ4RMrTEJf?si=98b8844a1c91416a
 - genre: lo-fi
   playlist: https://open.spotify.com/playlist/6YpGPZ2hN9dWl8YXGhYd8C?si=6a44b697c5ec405e
 - genre: dubstep
   playlist: https://open.spotify.com/playlist/4zF9xcrOQJSoLA3oWNdlVP?si=05ff1d518d7f4ed3
+- genre: hip-hop
+  playlist: https://open.spotify.com/playlist/1ecOHyAwXOIXcGUNVZihfG?si=2b1f5eecc7344f5e
