--- a/_data/playlists.yml
+++ b/_data/playlists.yml
@@ -16,3 +16,7 @@
   playlist: https://open.spotify.com/playlist/4zF9xcrOQJSoLA3oWNdlVP?si=05ff1d518d7f4ed3
 - genre: hip-hop
   playlist: https://open.spotify.com/playlist/1ecOHyAwXOIXcGUNVZihfG?si=2b1f5eecc7344f5e
+- genre: k-rnb
+  playlist: https://open.spotify.com/playlist/0mVatjXUgfuGMdfkFEFvaa?si=160266277d364755
+- genre: piano
+  playlist: https://open.spotify.com/playlist/0dNTpOg52XTk1usiYKyFAG?si=a63ce25b76844958
