updated 3wks songs

--- a/_data/playlists.yml
+++ b/_data/playlists.yml
@@ -20,3 +20,5 @@
   playlist: https://open.spotify.com/playlist/0mVatjXUgfuGMdfkFEFvaa?si=160266277d364755
 - genre: piano
   playlist: https://open.spotify.com/playlist/0dNTpOg52XTk1usiYKyFAG?si=a63ce25b76844958
+- genre: pop-rock
+  playlist: https://open.spotify.com/playlist/253xUVHxlqhBuZgjnpQJBR?si=b830b0349c484620
