updated scrobbled stats

--- a/_data/music_stats.yml
+++ b/_data/music_stats.yml
@@ -28,15 +28,15 @@
       scrobbles: 203
 - date: 2021-09-17
   week: "Sep 10 - Sep 16, 2021"
-  genres: ["piano", "rnb", "electronic", "instrumental", "k-pop"]
+  genres: ["rnb", "k-pop", "electronic", "instrumental", "pop"]
   artists:
     - name: "TWICE"
-      scrobbles: 48
-    - name: "DooPiano"
-      scrobbles: 44
-    - name: "City Girl"
-      scrobbles: 32
-    - name: "Keshi"
       scrobbles: 28
-    - name: "StayC"
-      scrobbles: 19
+    - name: "Ariana Grande"
+      scrobbles: 6
+    - name: "keshi"
+      scrobbles: 5
+    - name: "Keshi"
+      scrobbles: 5
+    - name: "NOTD"
+      scrobbles: 5
