--- a/_data/playlists.yml
+++ b/_data/playlists.yml
@@ -22,3 +22,7 @@
   playlist: https://open.spotify.com/playlist/0dNTpOg52XTk1usiYKyFAG?si=a63ce25b76844958
 - genre: pop-rock
   playlist: https://open.spotify.com/playlist/253xUVHxlqhBuZgjnpQJBR?si=b830b0349c484620
+- genre: retro
+  playlist: https://open.spotify.com/playlist/4hM0beRSrYIs1yzJrbmYiv?si=411adfd6f3ec4cd3
+- genre: color-pop
+  playlist: https://open.spotify.com/playlist/65dwseBbOD89dkp748ckks?si=2b080499cebb471a
